// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`a universal selector toJSON with a namespace 1`] = `
{
  "inputs": [
    {
      "css": "foo|* {}",
      "hasBOM": false,
      "id": "<input css _____>",
    },
  ],
  "namespace": <foo>,
  "raws": {},
  "sassType": "universal",
  "source": <1:1-1:6 in 0>,
}
`;

exports[`a universal selector toJSON with no namespace 1`] = `
{
  "inputs": [
    {
      "css": "* {}",
      "hasBOM": false,
      "id": "<input css _____>",
    },
  ],
  "raws": {},
  "sassType": "universal",
  "source": <1:1-1:2 in 0>,
}
`;
